--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,8 @@
 .card {
-  border: 1px solid black;
+  box-shadow: 0 2px 4px 0 rgba(50, 50, 93, 0.1);
   width: 180px;
   height: 220px;
   border-radius: 10px;
+  padding: 16px;
+  background-color: white;
 }
