--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -1,12 +1,10 @@
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   grid-gap: 16px;
 }
 
 .container {
   max-width: 800px;
-  padding-left: 32px;
-  padding-right: 32px;
   margin: 0 auto;
 }
